spec/test/_test_case_archive/sample2/data-error/6/result.txt
do_test tecsgen /home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-error/6 error-6.idl
/home/ykominami/repo/ns3-tecsgen/tecsgen/test_auto/spec/test_data2/sample2/data-error/6 ~
##### tecsgen error-6.idl  #####
error-6.idl:7:2: error: G1016 syntax error near '}'
1 error
~
